Fix textarea alignment

--- a/src/main/html/style.css
+++ b/src/main/html/style.css
@@ -7,3 +7,7 @@ input:focus, textarea:focus, select:focus {
     outline: none !important;
     box-shadow: none !important;
 }
+
+textarea {
+    vertical-align: top;
+}
